--- a/styles/style.css
+++ b/styles/style.css
@@ -18,6 +18,17 @@ body {
     color: #131318;
 }
 
+.btn-primary{
+    width: 150px;
+    height: 43px;
+    border-radius: 8px;
+    background: var(--primary-color);
+    color: #FFF;
+    border: 0;
+    /* margin: 15px; */
+    padding: 10px;
+}
+
 /* header styles */
 /* nav styles */
 
@@ -63,7 +74,56 @@ body {
     color: var(--primary-color);
 }
 
+/* banner styles */
+.banner {
+    width: 1000px;
+    height: 500px;
+    border-radius: 16px;
+    background-image: linear-gradient(180deg, rgba(19, 19, 24, 0.80) 0%, rgba(19, 19, 24, 0.00) 100%), url('../Images/Group\ 13.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
 
+.banner h1 {
+    color: #FFF;
+    font-size: 4rem;
+    font-weight: 800;
+    text-align: center;
+    padding-top: 85px;
+}
+
+.banner p {
+    color: #FFF;
+    text-align: center;
+}
+
+.banner-inputs {
+    border-radius: 8px;
+    background: rgba(255, 255, 255, 0.30);
+    margin: 60px 150px;
+}
+
+.input1 {
+    width: 140px;
+    height: 25px;
+    border-radius: 8px;
+    background: #FFF;
+    color: rgba(19, 19, 24, 0.50);
+    border: 0;
+    margin: 15px;
+    padding: 10px;
+}
+
+#input2, #input3{
+    width: 150px;
+    height: 43px;
+    border-radius: 8px;
+    background: #FFF;
+    color: rgba(19, 19, 24, 0.50);
+    border: 0;
+    margin-right: 15px;
+    padding: 10px;
+}
 
 
 
