--- a/styles/style.css
+++ b/styles/style.css
@@ -18,7 +18,7 @@ body {
     color: #131318;
 }
 
-.btn-primary{
+.btn-primary {
     width: 150px;
     height: 43px;
     border-radius: 8px;
@@ -114,7 +114,8 @@ body {
     padding: 10px;
 }
 
-#input2, #input3{
+#input2,
+#input3 {
     width: 150px;
     height: 43px;
     border-radius: 8px;
@@ -145,6 +146,44 @@ body {
     .nav .nav-part2 {
         flex-direction: column;
     }
+
+    .banner {
+        width: 100%;
+    }
+
+    .banner h1 {
+        font-size: 3rem;
+        font-weight: 700;
+        padding-top: 40px;
+    }
+
+    .banner h1,
+    .banner p {
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+
+    .banner-inputs {
+        margin: 60px 100px;
+    }
+
+    .input1 {
+        width: 235px;
+        margin-bottom: 10px;
+    }
+
+    #input2,
+    #input3 {
+        width: 255px;
+        margin-left: 14px;
+        margin-bottom: 10px;
+    }
+
+    .btn-primary {
+        width: 255px;
+        margin-left: 13px;
+        margin-bottom: 15px;
+    }
 }
 
 /* tablet */
@@ -152,5 +191,39 @@ body {
     .nav {
         margin-top: 20px;
         flex-direction: column;
+    }
+
+    .banner {
+        width: 100%;
+    }
+
+    .banner h1 {
+        font-size: 3rem;
+        font-weight: 700;
+        padding-top: 40px;
+    }
+
+    .banner h1,
+    .banner p {
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+
+    .input1 {
+        width: 235px;
+        margin-bottom: 10px;
+    }
+
+    #input2,
+    #input3 {
+        width: 255px;
+        margin-left: 14px;
+        margin-bottom: 10px;
+    }
+
+    .btn-primary {
+        width: 255px;
+        margin-left: 13px;
+        margin-bottom: 15px;
     }
 }
