--- a/styles/style.css
+++ b/styles/style.css
@@ -206,11 +206,70 @@ main section {
 }
 
 #card3 {
-    margin: 50px auto 0;
+    margin: 30px auto 0;
     border-radius: 16px;
     border: 1px solid rgba(233, 68, 68, 0.20);
     background: rgba(233, 68, 68, 0.05);
 }
+
+
+/* newsletter section starts */
+.newsletter {
+    display: flex;
+    align-items: center;
+    gap: 50px;
+}
+
+#nh2 {
+    color: #131318;
+    font-weight: 800;
+}
+
+.newsletter form {
+    border-radius: 16px;
+    border: 1px solid #FF5400;
+    padding: 40px;
+    margin-bottom: 50px;
+}
+
+#text-input,
+#email-input {
+    width: 300px;
+    height: 40px;
+    border-radius: 8px;
+    background: rgba(19, 19, 24, 0.05);
+    color: rgba(19, 19, 24, 0.30);
+    border: 0;
+    padding-left: 20px;
+}
+
+#submit-input {
+    width: 323px;
+    height: 40px;
+    border-radius: 8px;
+    background: var(--primary-color);
+    color: #FFF;
+    border: 0;
+    padding: 10px;
+    cursor: pointer;
+    text-align: center;
+    font-weight: 600;
+}
+
+.newsletter .sill {
+    width: 260px;
+    height: 100px;
+    border-radius: 16px;
+    background: #FF5400;
+    color: #FFF;
+    border: 0;
+    padding: 3px;
+    text-align: center;
+    transform: translateX(275px) translateY(-150px) rotate(-19.628deg);
+}
+
+
+
 
 
 
@@ -311,6 +370,19 @@ main section {
     #card3 {
         margin-top: 30px;
     }
+
+    .newsletter {
+        flex-direction: column;
+        gap: 1px;
+    }
+
+    #ni {
+        width: 100%;
+    }
+
+    .newsletter .sill {
+        transform: translateX(200px) translateY(-150px) rotate(-19.628deg);
+    }
 }
 
 
@@ -383,5 +455,14 @@ main section {
 
     #card3 {
         margin-top: 30px;
+    }
+
+    .newsletter {
+        flex-direction: column;
+        gap: 1px;
+    }
+
+    #ni {
+        width: 100%;
     }
 }
