--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,9 @@
 
 body {
     font-family: "Mulish", sans-serif;
+}
+
+.the-body {
     max-width: 1000px;
     margin: 0 auto;
 }
@@ -298,28 +301,17 @@ footer li {
     list-style: none;
 }
 
+#fhr {
+    width: 700px;
+}
+
 footer .footer-small {
     padding-bottom: 50px;
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* responsive styles */
-/* mobile device */
+/* for mobile device */
 
 @media screen and (max-width: 600px) {
     .nav {
@@ -336,7 +328,7 @@ footer .footer-small {
     }
 
     .banner h1 {
-        font-size: 3rem;
+        font-size: 2.5rem;
         font-weight: 700;
         padding-top: 40px;
     }
@@ -348,7 +340,7 @@ footer .footer-small {
     }
 
     .banner-inputs {
-        margin: 60px 100px;
+        margin: 60px 90px;
     }
 
     .input1 {
@@ -413,16 +405,20 @@ footer .footer-small {
     }
 
     .newsletter .sill {
-        transform: translateX(200px) translateY(-150px) rotate(-19.628deg);
+        transform: translateX(190px) translateY(-150px) rotate(-19.628deg);
     }
 
-    footer {
-        max-width: 100vw;
+    #footer-paragraph {
+        padding: 5px 40px 10px;
+    }
+
+    #fhr {
+        width: 90%;
     }
 }
 
 
-/* tablet */
+/* for tablet */
 @media screen and (min-width: 600px) and (max-width: 992px) {
     .nav {
         margin-top: 20px;
@@ -500,5 +496,13 @@ footer .footer-small {
 
     #ni {
         width: 100%;
+    }
+
+    #footer-paragraph {
+        padding: 5px 40px 10px;
+    }
+
+    #fhr {
+        width: 90%;
     }
 }
